Jackson migration to version 3